<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    
    <string name="app_name">Accurate Driving Test</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="obd_data_menu">OBD\nData</string>
    <string name="route_progress_menu">Route\nProgress</string>
    <string name="test_progress_menu">Test\nProgress</string>
    <string name="comment_menu">Comment\nMenu</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="return_from_comment_menu">Hide\nComment\nMenu</string>
    <string name="view_comment_templates">View Comment\nTemplates</string>
    <string name="add_comment">Add Comment</string>
    <string name="score">Score: 100/100</string>
    <string name="enter_comment">Enter comment here</string>
    <string name="comment_instructions">Touch map to place comment</string>
    <string name="return_from_OBD_data_menu">Hide\nOBD\nData</string>
    <string name="return_from_route_progress_menu">Hide\nRoute\nProgress</string>
    <string name="return_from_test_progress_menu">Hide\nTest\nProgress</string>
    <string name="title_activity_splash__screen"></string>
    <string name="accurate_driving_test">Accurate Driving\nTest</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_user_menu">UserMenu</string>
    <string name="title_activity_login_screen">Login Screen</string>
    <string name="title_activity_begin_evaluation">Begin Evaluation</string>
    <string name="title_activity_review_evaluation">Review Evaluation</string>
   
    <!-- BEGIN USER MENU STRINGS -->
    <string name="begin_evaluation">Begin Evaluation</string>
    <string name="create_and_edit_routes">Create and Edit Routes</string>
    <string name="create_and_edit_tests">Create and Edit Tests</string>
    <string name="view_past_evaluations">View Past Evaluations</string>
    <string name="edit_account">Edit Account</string>
    <string name="title_activity_during_evaluation"></string>
    <string name="title_activity_add_route">AddRoute</string>
    <string name="title_activity_create_test">CreateTest</string>
    <string name="go_to_obd_connection">Go To OBD Connection</string>
    <string name="select_your_route">Select your route:</string>
    <string name="title_activity_elm_main">Test OBD Connection</string>
    <!-- END USER MENU STRINGS -->
    
    <!-- BEGIN ADD ROUTE STRINGS -->
	<string name="add_waypoint">Add Waypoint</string>
    <string name="enter_street_address">Enter Address</string>
    <string name="title_activity_add_route_two">AddRouteTwo</string>
    <string name="remove_waypoint">Remove Waypoint</string>
    <string name="enter_route_name">Enter route name</string>
    <string name="save_route">Save Route</string>
    <string name="view_routes">View Routes</string>
    <string name="load_route">Load Selected\nRoute</string>
	<!-- END ADD ROUTE STRINGS -->
	
	<!--  BLUTOOTH STRINGS -->
	
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect to OBD-II Adapter</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    
    
    
    <string name="developedby">Developed By: Ryan Bergquist</string>
    
    
    <!--  Get Data Screen -->
    <string name="MPH">MPH</string>
    <string name="RPM">RPM</string>
    <string name="CIA">Intake Air Temperature</string>
    <string name="CT">Coolant Temperature</string>
    <string name="load">Engine Load</string>
    <string name="OT">Oil Temperature</string>
    <string name="zero">0</string>
    <string name="getdata">Get Vehicle Operating Data</string>
    <string name="getcodes">Check Trouble Codes</string>
    <string name="logo">Application Logo</string>
    <string name="voltage">Voltage</string>
    <string name="TX">TX: </string>
    <string name="RX">RX: </string>
    <string name="blank"> </string>
    
    <!--  Get Trouble Codes Screen -->
    <string name="found">Trouble Codes Found:</string>
    <string name="erasecodes">Clear Trouble Codes</string>
    <string name="nocodesfound">No Trouble Codes Found!</string>
    
    
    
    <string name="action_scan">Scan around &#8230;</string>

    <string name="dialog_title_1">Paired devices</string>
    <string name="dialog_title_2">Scan in progress &#8230;</string>
    <string name="dialog_search_btn">Scan devices around &#8230;</string>
    <string name="dialog_close_btn">Close</string>
    
    <string name="menu_send_cmd">Send Default Commands</string>
    <string name="menu_clr_screen">Clear Screen Logs</string>
    <string name="menu_obd_mode">Toggle Simulator/OBD mode</string>
    <string name="menu_obd_clear_code">Clear Code</string>

    <string name="BT_connection_status">Connection Status</string>
    <string name="BT_connecting">Connecting &#8230;</string>
    <string name="BT_status_not_connected">Not connected</string>
    <string name="BT_status_connected_to">Connected to</string>

    <string name="no_command">Please enter a command</string>
    <string name="bt_not_available">Bluetooth device is unavailable</string>

    <string name="imageView">imageView</string>
    <string name="lbl_username">Evaluators Name</string>
 	<string name="lbl_enter_username">Enter Evaluator Name</string>
	<string name="lbl_pwd">Password</string>
 	<string name="lbl_enter_pwd">Enter your password</string>
 	<string name="lbl_driver_name">Drivers License</string>
 	<string name="lbl_enter_driver_name">Enter Drivers License Number</string>
     <string name="lbl_login">Login</string>
     <string name="lbl_login_as_user">Continue</string>
 	
    <!-- END BLUTOOTH STRINGS -->
	
	<!-- BEGIN CREATE TEST STRINGS -->
	<string name="tests_save">Save Test</string>
	<string name="tests_load">Load Test</string>
	<string name="tests_used">Tests Used</string>
	<string name="tests_used_not">Tests Not Used</string>
	<string name="fail_test">Fail</string>
	<!-- END CREATE TEST STRINGS -->

</resources>
