<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

	<LinearLayout android:id="@+id/uname_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvConnectionStatus"
            android:orientation="horizontal">  

            <TextView android:id="@+id/Evaluator_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_username"
             />

            <EditText
                android:id="@+id/fld_Evaluator_name"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_username" />

    </LinearLayout>

    <LinearLayout android:id="@+id/pwd_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname_block"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pwd"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pwd" />

        <EditText
            android:id="@+id/fld_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lbl_enter_pwd" />

    </LinearLayout>
    
	<Button
    android:id="@+id/btn_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
	android:layout_marginStart="0dp"
	android:layout_marginLeft="60dp"
    android:layout_below="@+id/pwd_block"
	android:onClick="toUserMenu"
    android:text="@string/lbl_login" />

	<Button
	    android:id="@+id/Button01"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/btn_login"
	    android:layout_alignBottom="@+id/btn_login"
	    android:layout_marginLeft="20dp"
	    android:layout_marginStart="20dp"
	    android:layout_toRightOf="@+id/btn_login"
	    android:layout_toEndOf="@+id/btn_login"
		android:onClick="checkPassword"
	    android:text="@string/lbl_login_as_user" />

</RelativeLayout>
